feat: Add targeting and creative features
This commit introduces several new features:

- **Targeting:** Adds support for Geography and Device targeting to both the Google Ad Manager and Triton Digital adapters.
- **Creatives:** Implements robust creative asset handling for both adapters, allowing for the creation and association of image, video, and audio creatives.
- **Testing:** Includes comprehensive tests for all new features, ensuring correctness and preventing regressions.
- **Documentation:** Updates the README and TODO files to reflect the new capabilities.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,18 @@
 # TODO
 
+## Creative upload
+- Support Kevel creative templates & the ability to traffic a native ad in
+  Kevel
+
+## New adapters
+- Add support for Kevel: https://dev.kevel.com/reference/campaign-api-overview
+
 ## Targeting Features Roadmap
 
 ### Google Ad Manager
-- [ ] Geography (Country, Region, City, Postal Code)
-- [ ] Device (Category, Browser, Manufacturer, Model)
 - [ ] Inventory (Ad Units, Placements)
 - [ ] Day & Time (Dayparting)
 
 ### Triton Digital
-- [ ] Geography (Country, DMA)
-- [ ] Device (Type, OS Family)
 - [ ] Advanced Audience (3rd-party data segments)
 - [ ] Contextual Targeting
