feat: Add Kevel adapter with custom template support
This commit introduces a new ad server adapter for the Kevel Management API.

- **Kevel Adapter:** Implements the core functionality for creating campaigns, flights, and creatives in Kevel.
- **Custom Creatives:** Adds support for creating creatives from custom Kevel templates by extending the  schema.
- **Testing:** Includes a full suite of tests for the new adapter, mocking the Kevel API to ensure correctness.
- **Documentation:** Updates the README and TODO files to reflect the new adapter and its capabilities.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,5 @@
 # TODO
 
-## Creative upload
-- Support Kevel creative templates & the ability to traffic a native ad in
-  Kevel
-
-## New adapters
-- Add support for Kevel: https://dev.kevel.com/reference/campaign-api-overview
-
 ## Targeting Features Roadmap
 
 ### Google Ad Manager
@@ -16,3 +9,7 @@
 ### Triton Digital
 - [ ] Advanced Audience (3rd-party data segments)
 - [ ] Contextual Targeting
+
+### Kevel
+- [ ] More advanced targeting (e.g., custom attributes, user-level targeting)
+- [ ] Full implementation of status checks, delivery reporting, and updates
